app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: Dev
  ports:
    - port: 80
      targetPort: 80
